crates/conflate/tests/compile/derive-enum.stderr
error: conflate::Merge can only be derived for structs
 --> tests/compile/derive-enum.rs:6:10
  |
6 | #[derive(Merge)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Merge` (in Nightly builds, run with -Z macro-backtrace for more info)
